fix: Make quick nav buttons always visible

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1600,7 +1600,7 @@
         </div>
 
         <!-- Quick Navigation (nur für eingeloggte Gäste) -->
-        <div class="quick-nav" id="quickNav" style="display: none;">
+        <div class="quick-nav" id="quickNav" style="display: flex;">
             <button class="quick-nav-btn" onclick="scrollToSection('weatherCard')" title="Zum Wetter">
                 <i data-lucide="cloud-sun"></i>
                 <span data-i18n="header.weather">Wetter</span>
