--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -224,11 +224,12 @@
 
         /* Main Content */
         .main {
+            z-index: 200;
             max-width: 900px;
             margin: -40px auto 40px;
             padding: 0 20px;
             position: relative;
-            z-index: 2;
+            z-index: 200;
         }
 
         /* Cards */
@@ -280,6 +281,9 @@
 
         /* Welcome Card */
         .welcome-card {
+            position: relative;
+            z-index: 200;
+            margin-top: -20px;
             text-align: center;
             padding: 40px 32px;
         }
@@ -878,6 +882,7 @@
             }
 
             .main {
+            z-index: 200;
                 margin-top: -30px;
             }
 
