--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Gast auf Erden | Spiritueller Rückzugsort am Waldrand</title>
 
+    <!-- Preconnect für schnelleres Laden externer Ressourcen -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://api.openweathermap.org">
+    <link rel="dns-prefetch" href="https://maps.googleapis.com">
+
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -81,7 +87,7 @@
         /* Header */
         .header {
             background: linear-gradient(135deg, rgba(45, 74, 62, 0.7) 0%, rgba(122, 145, 104, 0.6) 100%),
-                        url('header-bg.png');
+                        url('header-bg.jpg');
             background-size: cover;
             background-position: center;
             color: white;
@@ -1292,6 +1298,57 @@
             to { transform: rotate(360deg); }
         }
 
+        /* Skeleton Loading Animation */
+        @keyframes skeleton-pulse {
+            0%, 100% { opacity: 0.4; }
+            50% { opacity: 0.8; }
+        }
+
+        .skeleton {
+            background: linear-gradient(90deg, var(--sand) 25%, var(--cream) 50%, var(--sand) 75%);
+            background-size: 200% 100%;
+            animation: skeleton-pulse 1.5s ease-in-out infinite;
+            border-radius: 6px;
+        }
+
+        .skeleton-item {
+            display: flex;
+            align-items: flex-start;
+            gap: 10px;
+            padding: 10px 12px;
+            background: var(--cream);
+            border-radius: 10px;
+        }
+
+        .skeleton-icon {
+            width: 32px;
+            height: 32px;
+            border-radius: 8px;
+        }
+
+        .skeleton-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        .skeleton-title {
+            height: 14px;
+            width: 70%;
+        }
+
+        .skeleton-meta {
+            height: 12px;
+            width: 50%;
+        }
+
+        .skeleton-actions {
+            height: 24px;
+            width: 40%;
+            margin-top: 4px;
+        }
+
         /* Button Styles */
         .btn {
             padding: 12px 24px;
@@ -1609,7 +1666,7 @@
             </button>
         </div>
         <div class="header-content">
-            <img src="/logo-neu.png" alt="Logo" class="header-logo">
+            <img src="/logo-neu.png" alt="Logo" class="header-logo" loading="lazy" decoding="async">
             <h1 id="mainTitle">gastauferden.at</h1>
             <p class="subtitle">Ein magischer Ort zum Sein • Hollenthon</p>
         </div>
